--- a/mod3/actividad4/css/formulario.css
+++ b/mod3/actividad4/css/formulario.css
@@ -19,14 +19,17 @@ form {
   border: 0px dotted blue;
   margin-right: 10px;
   padding: 0px;
-  width: 20%;
+  width: 30%;
   height: auto;
   text-align: right;
   overflow: hidden;
+  font-size: 130%;
+  background-image: url('sand.jpg');
 }
 
 .col-2 {
   width: 80%;
+  font-size: 100%;
 }
 
 input {
@@ -44,12 +47,13 @@ input {
   border: 1px solid black;
   border-radius: 5px;
   margin: 10px;
-  padding: 5px 10px;
-  font-weight: bold;;
+  padding: 10px 25px;
+  font-weight: bold;
+  font-size: 100%;
 }
 
 .buttons input:hover {
-  background-color: lightgreen;
+  background-color: burlywood;
   cursor: pointer;
 }
 
