--- a/mod3/act5/web/css/estilos.css
+++ b/mod3/act5/web/css/estilos.css
@@ -1,3 +1,7 @@
-modal {
-    border: 1px solid black;
+.carousel-caption > h5, .carousel-caption > p {
+    text-shadow: 2px 2px 3px black;
+}
+
+* {
+    border: 0px solid black;
 }
