[M3A8] Arregla tamaño de tabpanels en pantallas grandes

--- a/mod3/act8/css/estilos.css
+++ b/mod3/act8/css/estilos.css
@@ -68,3 +68,9 @@ body {
         margin: 0px auto 15px;
     }
 }
+
+@media (min-width: 992px) {
+    .tab-content .tab-pane {
+        height: 485px;
+    }
+}
