--- a/mod3/act6/css/estilos.css
+++ b/mod3/act6/css/estilos.css
@@ -1,3 +1,6 @@
+body {
+    background-color: #e6ffff;
+}
 .jumbotron {
     height: 50vw;
     background-image: url("../img/spa.jpg");
@@ -5,6 +8,11 @@
     background-attachment: fixed;
     background-size: cover;
     border-radius: 0;
+}
+
+.jumbotron h1 {
+    color: #e6ffe6;
+    text-shadow: 1px 1px 5px black;
 }
 
 .row img {
