--- a/mod3/act11/css/estilos.css
+++ b/mod3/act11/css/estilos.css
@@ -1,30 +1,84 @@
-/* * {
-    border: 1px dotted gray;
-} */
-
 #calculadora {
     font-family: "Lucida Console", Courier, monospace;
-    width: 289px;
-  }
+    padding: 0.75rem 0.75rem;
+    box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
+    margin-left: auto;
+    margin-right: auto;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 24% 24% 24% 24%;
+    grid-template-rows: 8% auto auto 12% 12% 12% 12% 12%;
+    gap: 1%;
+}
 
-#salida {
-    font-size: 2em;
-    overflow: auto;
+#pantalla, h2 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+}
+
+h2 {
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+#pantalla {
+    grid-row-start: 2;
+    grid-row-end: 4;
+    margin-bottom: 0.75rem;
+    padding: 0.75rem 0.75rem 0;
+    display: flex;
+    flex-direction: column;
+}
+
+#operador, #salida {
+    text-align: end;
 }
 
 #operador {
-    height: 32px;
+    flex-grow: 0;
+    padding-top: 1rem;
+    padding-right: 1rem;
+    font-size: 2rem;
+    line-height: 1rem;
+    height: 1rem;
 }
 
-button {
-    width: 60px;
-    height: 50px;
-} 
-
-.form-inline:last-child > button:first-child {
-    font-size: 0.8em;
+#salida {
+    flex-grow: 1;
+    font-size: 5.8rem;
+    line-height: 5rem;
+    padding-bottom: 0.25rem;
+    font-weight: bold;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
-.form-inline > button:not(:first-child) {
-    margin-left: 5px;
+.btn {
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+@media (min-width: 768px) {
+    #calculadora {
+        width: 75vw;
+    }
+}
+
+@media (min-width: 992px) {
+    #calculadora {
+        width: 65vw;
+    }
+}
+
+
+@media (min-width: 1200px) {
+    #calculadora {
+        margin-top: 3rem;
+        width: 550px;
+        height: 800px;
+    }
 }
